# tracing-test

./: Cargo.toml  Dockerfile  PROMETHEUS.md  README.md  prometheus.yml  sample.yaml  sample_data.json
fluent_bit/: config.yaml  daemonset.yaml  role.yaml
queries/: 0.txt  1.txt  2.txt
src/: main.rs  script.rs
