[package]
edition = "2018"
name = "tracing-test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio 
# tracing 
# log 
# futures is all you need for this 
env_logger = "0.8.1"
futures = "0.3.5"
futures-util = "0.3.5"
log = '0.4.11'
thiserror = "1.0.20"
tokio = {version = "1.5.0", features = ["full"]}
tracing = "0.1.30"
tracing-subscriber = "0.2"
rand = "0.8.4"
uuid = { version = "0.8", features = ["serde", "v4"] }