[package]
edition = "2018"
name = "tracing-test"
version = "0.1.0"

[[bin]]
name = "tracing-test"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/script.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# tokio 
# tracing 
# log 
# futures is all you need for this 
console-subscriber = "0.1.2"
elasticsearch = "7.14.0-alpha.1"
env_logger = "0.8.1"
futures = "0.3.5"
futures-util = "0.3.5"
json_logger = "0.1.0"
log = '0.4.11'
serde = {version = "1.0.100", default-features = false}
serde_json = "1.0"
thiserror = "1.0.20"
tokio = {version = "1.5.0", features = ["full", "tracing"]}
# tracing = "0.1.30"
# tracing-subscriber = "0.2"
rand = "0.8.4"
uuid = {version = "0.8", features = ["serde", "v4"]}
prometheus-client = "0.15.1"
tide = "0.16"
